Bug 151891 - Connectors created in PPTX they are appear incorrectly when opened in Impress.
Summary: Connectors created in PPTX they are appear incorrectly when opened in Impress.
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:7.5.0 target:7.4.4
Keywords: bibisectRequest, regression
Depends on:
Blocks: PPTX-Shapes
  Show dependency treegraph
 
Reported: 2022-11-04 10:06 UTC by NISZ LibreOffice Team
Modified: 2022-11-25 12:32 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Sample file (33.81 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2022-11-04 10:07 UTC, NISZ LibreOffice Team
Details
Compaire Powerpoint (left) Impress (right) (89.14 KB, image/png)
2022-11-04 10:08 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2022-11-04 10:06:17 UTC
Description:
If we create connectors in PPTX, they appear incorrectly when opened in impress.

Steps to Reproduce:
1. Open attachement file in LO.
2. Compare the file created in PPTX.

Actual Results:
Connector appear incorrectly.

Expected Results:
Connector looks similar then in PPTX.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 02db1642c9ce4394f4f85755c4a0a831e547e4fb
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 1 NISZ LibreOffice Team 2022-11-04 10:07:29 UTC
Created attachment 183402 [details]
Sample file
Comment 2 NISZ LibreOffice Team 2022-11-04 10:08:25 UTC
Created attachment 183403 [details]
Compaire Powerpoint (left) Impress (right)
Comment 3 Commit Notification 2022-11-14 12:32:03 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d8c89fb920af747ec51ce966b5d7b65e9340afbd

tdf#151891 PPTX import: fix regression of connector position

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 NISZ LibreOffice Team 2022-11-24 09:12:27 UTC
Verified in:
Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 651658d37bcb3f493942dd5d0b9a0d65c96f105c
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 5 Commit Notification 2022-11-25 12:32:55 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/8abf381416e4cad90027542c1d230736cc1b4d96

tdf#151891 PPTX import: fix regression of connector position

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.