tdf#151891 PPTX import: fix regression of connector position

If the connector shape is connected to the glue point which there
is inside the bounding box, then the position of connector appear
incorrectly, for example different direction of the arrow head.

Regression likely from commit cbf66ec3e60d07efb7c3cceed9b4f0fb4f0510c8
"tdf#89449 PPTX import: fix line connectors", as tdf#148926.

Follow-up to commit eec48130271188cab63665acedbabf1ff5e850a2
"tdf#148926 tdf#151678 PPTX import: position of standard connector
 - part1".

Change-Id: I5671bc70e663a979c43bad1b786118a6a9e92972
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142293
Reviewed-by: László Németh <nemeth@numbertext.org>
Tested-by: László Németh <nemeth@numbertext.org>